--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,10 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/image/favicon.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
 <!-- end custom head snippets -->
